fix the spacing of new editions section on smaller screens

--- a/web/_includes/style.css
+++ b/web/_includes/style.css
@@ -2354,9 +2354,14 @@ section.series-content {
   grid-gap: 6rem 2rem;
 } */
 
-section.book-content {
+section.book-content,
+section.editions {
   margin-block: 6rem;
   grid-gap: 4rem 2rem;
+}
+
+section.editions {
+  grid-gap: 0;
 }
 
 section.series-content {
@@ -2532,6 +2537,10 @@ time {
     margin: 2rem 1rem;
   }
 
+  section.editions {
+    grid-gap: 0;
+  }
+
   section.featured-book figure,
   .book-hero figure {
     grid-column: 2 / 6;
@@ -2571,12 +2580,14 @@ time {
 @media all and (max-width: 500px) {
   section.featured-book,
   section.book-content,
-  section.series-content {
+  section.series-content,
+  section.editions {
     grid-gap: 0;
   }
 
   section.book-content,
-  section.series-content {
+  section.series-content,
+  section.editions {
     margin: 2rem 1rem;
   }
 
@@ -2653,7 +2664,8 @@ time {
     padding: 3rem 0;
   }
   section.book-content,
-  section.series-content {
+  section.series-content,
+  section.editions {
     margin: 0 1rem;
   }
 
@@ -2719,6 +2731,9 @@ section.editions h2 {
     margin-top: 2rem;
   }
 
+  section.editions h2 {
+    grid-column: 2 / 12;
+  }
 
   .series-content .series-reviews {
   margin-top: initial;
@@ -2727,7 +2742,8 @@ section.editions h2 {
 
 @media all and (max-width: 650px) {
   .series-data-details,
-  .series-content {
+  .series-content,
+  section.editions h2 {
     grid-column: 1 / 13;
   }
 }
@@ -2738,6 +2754,7 @@ ol.booklist {
 
 section.books ol.booklist,
 section.editions ol.booklist,
+section.editions h2,
 .series-books {
   /* padding-block: 6rem; */
   grid-column: 3 / 11;
@@ -2755,6 +2772,7 @@ section.books.books--wide ol.booklist {
 @media all and (max-width: 800px) {
   section.books ol.booklist,
   section.editions ol.booklist,
+  section.editions h2,
   section.books.books--wide ol.booklist {
     grid-column: 2 / 12;
     grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
@@ -2764,6 +2782,7 @@ section.books.books--wide ol.booklist {
 @media all and (max-width: 650px) {
   section.books ol.booklist,
   section.editions ol.booklist,
+  section.editions h2,
   section.books.books--wide ol.booklist {
     grid-column: 1 / 13;
     /* grid-template-columns: 1fr; */
@@ -2813,9 +2832,16 @@ section.editions h2 {
   margin-block: var(--sm-margin-top);
 }
 
+li.edition-item a {
+  display: flex;
+  flex-direction: column;
+  gap: .6rem;
+}
+
 @media all and (max-width: 800px) {
   section.books,
-  section.series {
+  section.series,
+  section.editions {
     display: block;
     margin: 0 1rem 3rem;
 
